tests/baselines/reference/stringIndexerAssignments1.errors.txt
tests/cases/compiler/stringIndexerAssignments1.ts(5,1): error TS2322: Type '{ one: 数字; two: 文字; }' is not assignable to type '{ [index: 文字]: 文字; one: 文字; }'.
  Types of property 'one' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/stringIndexerAssignments1.ts (1 errors) ====
    var x: { [index: string]: string; one: string; };
    var a: { one: string; };
    var b: { one: number; two: string; };
    x = a;
    x = b; // error
    ~
!!! error TS2322: Type '{ one: 数字; two: 文字; }' is not assignable to type '{ [index: 文字]: 文字; one: 文字; }'.
!!! error TS2322:   Types of property 'one' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    